tests/ui/async-await/suggest-await-on-future-for-trait-bound.stderr
error[E0277]: the trait bound `impl Future<Output = i32>: Copy` is not satisfied
  --> $DIR/suggest-await-on-future-for-trait-bound.rs:17:15
   |
LL |     take_copy(number);
   |     --------- ^^^^^^ the trait `Copy` is not implemented for `impl Future<Output = i32>`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `take_copy`
  --> $DIR/suggest-await-on-future-for-trait-bound.rs:9:22
   |
LL | fn take_copy(_: impl Copy) {}
   |                      ^^^^ required by this bound in `take_copy`
help: consider `await`ing on the `Future`
   |
LL |     take_copy(number.await);
   |                     ++++++

error[E0277]: the trait bound `impl Future<Output = String>: Copy` is not satisfied
  --> $DIR/suggest-await-on-future-for-trait-bound.rs:28:15
   |
LL |     take_copy(string);
   |     --------- ^^^^^^ the trait `Copy` is not implemented for `impl Future<Output = String>`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `take_copy`
  --> $DIR/suggest-await-on-future-for-trait-bound.rs:9:22
   |
LL | fn take_copy(_: impl Copy) {}
   |                      ^^^^ required by this bound in `take_copy`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
